--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -4,6 +4,11 @@
     font-weight: bold;
 }
 
+h1 {
+    font-family: Calibri;
+    font-weight: bold;
+}
+
 body {
     font-family: Calibri;
 
@@ -23,3 +28,52 @@ body {
             margin-bottom: 0px;
             margin-top: 0px;
         }
+
+.grid {
+    background-color: #fff; 
+    border: solid 1px black; 
+    border-collapse:collapse; 
+    font-family:Calibri; 
+    color: #474747;
+}
+
+.grid td {
+    padding: 2px 6px;
+    border: solid 1px black;
+}
+
+.grid th {
+    padding: 2px 10px;
+    border: solid 1px black;
+    background-color: #AA8965;
+    color: white;
+    font-family: Calibri;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.grid .row {
+    background-color: #FFF6E6;
+}
+
+.grid .altrow {
+    background-color: #F3E2D0;
+}
+
+.grid .rows:hover {
+    background-color: #808080;
+    font-family: Calibri;
+    color: white;
+
+}
+
+.grid .pgr { background-color: #997A53; text-align:center; text-align:center; vertical-align: middle;}
+.grid .pgr td { border-width: 0; padding: 1px 6px;  font-weight: bold; color: white; line-height: 12px; text-align:center; vertical-align: middle;}  
+.grid .pgr a { color: white; text-decoration: underline; }
+.grid .prg span { text-decoration:underline }
+.grid .pgr a:hover { color: white; text-decoration: none; }
+
+footer {
+    font-size: small;
+    color: #997A53;
+}
