--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -85,3 +85,39 @@ footer {
     font-size: small;
     color: #997A53;
 }
+
+
+
+.fight table {
+    padding: 2px 10px;
+    border-collapse:collapse;
+    background-color: #FFF6E6;
+}
+
+th {
+    background-color: #AA8965;
+    border: solid 1px black;
+    border-collapse:collapse;
+    padding: 2px 5px;
+    color: white;
+    font-family: Calibri;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+tr {
+    border: solid 1px black;
+    border-collapse:collapse;
+    font-family: Calibri;
+    white-space: nowrap;
+}
+
+tr:nth-child(even) {
+    background-color: #F3E2D0;
+    border: solid 1px black;
+    border-collapse:collapse;
+}
+
+.login tr {
+    background-color: transparent;
+}
